# final-project-grustlers

./: .gitignore  FunctionDiagram.drawio  README.md  pyproject.toml
diagrams/: FunctionDiagram.drawio
examples/: main.py  main2.py  testing.py
src/WRA/: __init__.py  classes.py  classes_copy.py  classes_old.py  functions.py
tests/: class_test.py  class_tests.py  classes_test.py  functions_test.py
