# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "WRA"
description = "This package can be used to simulate a simple 2 DOF wind turbine system."
version = "0.0.1"
authors = [
    {name = "Jonathan G. R. Mai", email = "s203648@student.dtu.dk"},
    {name = "Viktor G. Johnsen", email = "s203649@student.dtu.dk"},
    {name = "Frederik B. Bornemann", email = "s203700@student.dtu.dk"}
]
dependencies = [
    "matplotlib >= 3.10.0",
    "numpy >= 2.1.3",
    "scipy >= 1.15.1",
    "pandas >= 2.2.3",
    "pytest >= 8.3.5"
]
requires-python = ">=3.13.1"

[project.urls]
Repository = "https://github.com/me/spam.git"