# An extremely simple pyproject.toml
# Many more options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# How to build your package. "[S]trongly recommended" to include this,
# per the docs. We use hatchling, default on Python docs.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Information on the package
[project]
name = "WRA"
description = "This Python package can be used for simple wind resource assessment using ERA5 reanalysis data."
version = "0.0.1"
authors = [
    {name = "Jonathan G. R. Mai", email = "s203648@student.dtu.dk"},
    {name = "Viktor G. Johnsen", email = "s203649@student.dtu.dk"},
    {name = "Frederik B. Bornemann", email = "s203700@student.dtu.dk"}
]
dependencies = [
    "numpy >= 2.2.4",
    "scipy >= 1.15.2",
    "pandas >= 2.2.3",
    "matplotlib >= 3.10.1",
    "windrose >= 1.9.2",
    "xarray >= 2025.3.1",
    "h5netcdf >= 1.6.1",
    "netCDF4 >= 1.7.2",
    "pytest >= 8.3.4",
    "pytest-cov >= 6.1.1"
]
requires-python = ">=3.13.2"

[project.urls]
Repository = "https://github.com/me/spam.git"